Refactoring and API-Gateway Update
