# documentation/OpenApi/openapi.json
@@ -1,43 +1,36 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "RAT - WADe Project",
-    "description": "### Tell REST what to do and take a rest\n\nThis file represents the OpenAPI 3.0 specification of the [RAT WADe Project](https://profs.info.uaic.ro/~busaco/teach/courses/wade/projects/index.html) of Fall 2021 made by Cioata Matei-Alexandru, Lipan Radu-Matei, Rezmerita Mihnea-Ioan. More information on what this api helps to achive can be found in the link attached.\n\nThe list below represents a necessary but not sufficient list of REST routes neccesar to create a tool which allows interacting with a REST API using natural language. The list will be updated as the project evolves.\n\n",
+    "title": "wade-rat-mihtei-rezciopan WADE-RAT|Mihtei-Rezciopan",
+    "description": "### Tell REST what to do and take a rest\n\nThis file represents the OpenAPI 3.0 specification of the [RAT WADe Project](https://profs.info.uaic.ro/~busaco/teach/courses/wade/projects/index.html) of Fall 2021 made by Cioata Matei-Alexandru, Lipan Radu-Matei, Rezmerita Mihnea-Ioan. More information on what this api helps to achive can be found in the link attached.\n\nThe list below represents a necessary but not sufficient list of REST routes neccesar to create a tool which allows interacting with a REST API using natural language. The list will be updated as the project evolves.\n",
     "version": "1.0.0"
   },
   "servers": [
     {
-      "url": "https://rat.wade.info.uaic.ro/api/v1"
-    }
-  ],
-  "security": [
-    {
-      "HeaderKey": []
+      "url": "https://wade-rat-mihtei-rezciopan-crbqcods.ew.gateway.dev"
     }
   ],
   "paths": {
     "/apis": {
-      "post": {
+      "get": {
         "tags": [
           "Apis"
         ],
-        "summary": "Creates a new Api entry in our database",
-        "operationId": "postApi",
-        "requestBody": {
-          "description": "Api specification to be processed and stored",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ApiSpecification"
+        "summary": "Lists all stored api specifications",
+        "operationId": "apisQuery",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GetApiBody"
+                  }
+                }
               }
             }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "Created",
-            "content": {}
           },
           "401": {
             "description": "Unauthorized",
@@ -49,8 +42,55 @@
               }
             }
           },
-          "409": {
-            "description": "Conflict",
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "x-google-backend": {
+          "address": "https://europe-west1-avid-airway-337117.cloudfunctions.net/apisEndpoint"
+        }
+      },
+      "post": {
+        "tags": [
+          "Apis"
+        ],
+        "summary": "Creates a new Api entry in our database",
+        "operationId": "apisPost",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PostApiBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetApiBody"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
             "content": {
               "application/json": {
                 "schema": {
@@ -70,7 +110,7 @@
             }
           },
           "500": {
-            "description": "Server Error",
+            "description": "Something went wrong",
             "content": {
               "application/json": {
                 "schema": {
@@ -79,6 +119,55 @@
               }
             }
           }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "x-google-backend": {
+          "address": "https://europe-west1-avid-airway-337117.cloudfunctions.net/apisEndpoint"
+        },
+        "x-codegen-request-body-name": "body"
+      },
+      "options": {
+        "tags": [
+          "Apis"
+        ],
+        "operationId": "apisOptions",
+        "responses": {
+          "204": {
+            "description": "A successful response",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "x-google-backend": {
+          "address": "https://europe-west1-avid-airway-337117.cloudfunctions.net/apisEndpoint"
         }
       }
     },
@@ -88,7 +177,7 @@
           "Apis"
         ],
         "summary": "Get all data about a stored Api",
-        "operationId": "getApi",
+        "operationId": "apiGet",
         "parameters": [
           {
             "name": "id",
@@ -100,15 +189,12 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "Ok",
+          "204": {
+            "description": "A successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Api"
-                  }
+                  "$ref": "#/components/schemas/GetApiBody"
                 }
               }
             }
@@ -124,7 +210,17 @@
             }
           },
           "404": {
-            "description": "Not Found",
+            "description": "Resource Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "412": {
+            "description": "Precondition Failed",
             "content": {
               "application/json": {
                 "schema": {
@@ -134,7 +230,7 @@
             }
           },
           "500": {
-            "description": "Server Error",
+            "description": "Something went wrong",
             "content": {
               "application/json": {
                 "schema": {
@@ -143,29 +239,35 @@
               }
             }
           }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "x-google-backend": {
+          "address": "https://europe-west1-avid-airway-337117.cloudfunctions.net/apiEndpoint"
         }
-      }
-    },
-    "/apis/specifications": {
-      "get": {
+      },
+      "options": {
         "tags": [
           "Apis"
         ],
-        "summary": "Lists all stored api specifications",
-        "operationId": "listApispecifications",
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ApiSpecification"
-                  }
-                }
-              }
+        "operationId": "apiOptions",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
             }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "A successful response",
+            "content": {}
           },
           "401": {
             "description": "Unauthorized",
@@ -178,7 +280,7 @@
             }
           },
           "500": {
-            "description": "Server Error",
+            "description": "Something went wrong",
             "content": {
               "application/json": {
                 "schema": {
@@ -187,16 +289,35 @@
               }
             }
           }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "x-google-backend": {
+          "address": "https://europe-west1-avid-airway-337117.cloudfunctions.net/apiEndpoint"
         }
       }
     },
-    "/apis/:id/nlp-to-rest": {
+    "/apis/{id}/nlp-to-rest": {
       "post": {
         "tags": [
           "Apis"
         ],
         "summary": "Translate a command given in natural language into a valid REST request",
-        "operationId": "nlpToRest",
+        "operationId": "apiNlpToRestPost",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of specification used while translating",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "requestBody": {
           "description": "Natural language text to be transformed into a valid REST request for the API specified",
           "content": {
@@ -219,7 +340,17 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/RestRequest"
+                  "$ref": "#/components/schemas/NlpToRestResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
                 }
               }
             }
@@ -255,7 +386,7 @@
             }
           },
           "500": {
-            "description": "Server Error",
+            "description": "Something went wrong",
             "content": {
               "application/json": {
                 "schema": {
@@ -264,13 +395,83 @@
               }
             }
           }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "x-google-backend": {
+          "address": "https://europe-west1-avid-airway-337117.cloudfunctions.net/nlpToRest"
+        },
+        "x-codegen-request-body-name": "text_content"
+      },
+      "options": {
+        "tags": [
+          "Apis"
+        ],
+        "operationId": "apiNlpToRestOptions",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "A successful response",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ],
+        "x-google-backend": {
+          "address": "https://europe-west1-avid-airway-337117.cloudfunctions.net/nlpToRest"
         }
       }
     }
   },
   "components": {
     "schemas": {
-      "Api": {
+      "PostApiBody": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "open_api_specification": {
+            "type": "string"
+          }
+        }
+      },
+      "GetApiBody": {
         "type": "object",
         "properties": {
           "id": {
@@ -279,45 +480,50 @@
           "url": {
             "type": "string"
           },
-          "openApiSpecificationUrl": {
+          "open_api_specification": {
             "type": "string"
           },
-          "authenticationType": {
-            "type": "string",
-            "enum": [
-              "None",
-              "ApiKey",
-              "OAuth"
-            ]
-          },
-          "credentials": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Dictionary"
+          "allowed_operations": {
+            "type": "object",
+            "properties": {
+              "DELETE": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              },
+              "PATCH": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              },
+              "POST": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              },
+              "PUT": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              },
+              "GET": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
             }
           },
-          "endpoints": {
+          "allowed_attributes": {
             "type": "array",
             "items": {
               "type": "object",
               "properties": {
-                "verb": {
-                  "type": "string",
-                  "enum": [
-                    "GET",
-                    "POST",
-                    "PUT",
-                    "PATCH",
-                    "DELETE"
-                  ]
-                },
-                "path": {
-                  "type": "string"
-                },
-                "body": {
-                  "type": "object"
-                },
-                "entity": {
+                "subject": {
                   "type": "string"
                 },
                 "attributes": {
@@ -325,19 +531,11 @@
                   "items": {
                     "type": "object",
                     "properties": {
-                      "name": {
+                      "attribute": {
                         "type": "string"
                       },
-                      "paramName": {
+                      "found_in": {
                         "type": "string"
-                      },
-                      "paramType": {
-                        "type": "string",
-                        "enum": [
-                          "Query",
-                          "Body",
-                          "Path"
-                        ]
                       }
                     }
                   }
@@ -347,32 +545,7 @@
           }
         }
       },
-      "Error": {
-        "type": "object",
-        "properties": {
-          "status": {
-            "type": "string"
-          },
-          "type": {
-            "type": "string"
-          },
-          "message": {
-            "type": "string"
-          }
-        }
-      },
-      "Dictionary": {
-        "type": "object",
-        "properties": {
-          "key": {
-            "type": "string"
-          },
-          "value": {
-            "type": "string"
-          }
-        }
-      },
-      "RestRequest": {
+      "NlpToRestResponse": {
         "type": "object",
         "properties": {
           "verb": {
@@ -392,40 +565,33 @@
           }
         }
       },
-      "ApiSpecification": {
+      "Dictionary": {
         "type": "object",
         "properties": {
-          "id": {
+          "key": {
             "type": "string"
           },
-          "url": {
+          "value": {
+            "type": "string"
+          }
+        }
+      },
+      "Error": {
+        "type": "object",
+        "properties": {
+          "code": {
             "type": "string"
           },
-          "openApiSpecificationUrl": {
+          "message": {
             "type": "string"
-          },
-          "authenticationType": {
-            "type": "string",
-            "enum": [
-              "None",
-              "ApiKey",
-              "OAuth"
-            ]
-          },
-          "credentials": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Dictionary"
-            }
           }
         }
       }
     },
     "securitySchemes": {
-      "HeaderKey": {
+      "api_key": {
         "type": "apiKey",
-        "description": "The RAT API Key will be used to check that the client application making the call to the API has access to do so.",
-        "name": "X-RAT-Key",
+        "name": "X-API-Key",
         "in": "header"
       }
     }
